create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="302" style="background-image: url(assets/images/picture2-1209x680.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="302" style="background-image: url(assets/images/picture2-1209x680.png); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -79,7 +79,7 @@
     <div class="container">
         
         <div class="lead"><p><strong>GETModer:&nbsp;</strong><span style="font-size: 1.07rem;">An Institutional Grade Crypto Ecosystem</span></p><p><span style="font-size: 1.07rem;"><strong>Products:</strong> Crypto Loan &amp; Instant Cryptocurrency Exchange</span></p><p><strong>Mission</strong>:<span style="font-size: 1.07rem;">&nbsp;1)&nbsp;</span><span style="font-size: 1.07rem;">Crypto Financing to Personal &amp; SMEs border-less, transparent and liquid as compared to traditional financing. 2) &nbsp;Cryptocurrency instant exchange at best rate and fast pace.</span></p><p><span style="font-size: 1.07rem;"><strong>Vision
-:&nbsp;</strong></span><span style="font-size: 1.07rem;">Our goal is to 1) create an Asia wide Business/Personal Loans Asset Platform. 2) To promote instant cryptocurrency exchange and aim at USD$100/day trading volume.</span></p></div>
+:&nbsp;</strong></span><span style="font-size: 1.07rem;">Our goal is to 1) create an Asia wide Business/Personal Loans Asset Platform. 2) To promote instant cryptocurrency exchange</span></p></div>
     </div>
 
 </section>
