--- a/page6.html
+++ b/page6.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-2f" data-rv-view="400" style="background-image: url(assets/images/1-d5rchcodw4fyjakhtgo5ha-1600x1000.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-2f" data-rv-view="400" style="background-image: url(assets/images/1-d5rchcodw4fyjakhtgo5ha-1600x1000.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(5, 106, 217);">
     </div>
@@ -116,7 +116,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="ICO Builder">
-                                <input type="hidden" value="Z5ouzSRV/jvUv6X01NewXY5FkhwFDQo0nq/NOFmZjRPoMxznzn4iZOkS8GkoKk8tKxwnBU8ZVFCBcAhJh0ci39RVciEEUzoe4tf9v5BjlgiqMRascKqneJ6XWheFrtaR" data-form-email="true">
+                                <input type="hidden" value="Lfnu/LSmQITW23gkznca6C00Hl0bZg+JZY2ljebKkszZvnFNgJ9ILxEAW7Wwc35VdTKvm5A4ax8+Fxt7RUxH122ja6UlneudtqdzbG/lbhyl2iQG/N812mdXGxzQ+Hn9" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
