--- a/page6.html
+++ b/page6.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-2f" data-rv-view="400" style="background-image: url(assets/images/1-d5rchcodw4fyjakhtgo5ha-1600x1000.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/i">build a website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-2f" data-rv-view="400" style="background-image: url(assets/images/1-d5rchcodw4fyjakhtgo5ha-1600x1000.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(5, 106, 217);">
     </div>
@@ -116,7 +116,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="ICO Builder">
-                                <input type="hidden" value="tpPg9BNDveeo8Zz520NrGejOzzeo3h9bnU0pz8QGCPJRaPynNBpH5mblWtfx+0FxwuC67AVWCFDbYzTvisoo7jdcy6Eemr/Phd6ShAEydyuvGcxSrF7FfUN+M/3qXA/3" data-form-email="true">
+                                <input type="hidden" value="lED8Eb/MszUzS+khanIeL1jUgGJ5HfsmYnMoJh/1LgBdaiW64DNcJaZ1gF/wZMuZ7cv/P9gcz/wxhfLSgueCrAXuMmEE6v0/xQe6GQbLHFmjv61SdnF8Cn+5mAzYRZva" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
