create github pages

--- a/page3.html
+++ b/page3.html
@@ -41,11 +41,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">ICO Builder (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">Local Exchange (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extTable1-k">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mitnet.exchange">MITNet Instant Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="378" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="378" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -74,11 +74,11 @@
 
                         <div class="mbr-table-cell mbr-right-padding-md-up col-md-7 text-xs-center text-md-right">
                            <div class="container2">
-                                <h3 class="mbr-section-title display-2">MITNet Exchange</h3>
+                                <h3 class="mbr-section-title display-2">GETModer 2018</h3>
                                 <div class="mbr-section-text lead">
-                                    <p>MITNet IEO has started. Ending in 31 May 2018</p>
+                                    <p>IEO starts on 15 March<br>End on 15 June</p>
                                 </div>
-                                <div class="countdown" data-end="2018/05/31"></div>
+                                <div class="countdown" data-end="2018/06/15"></div>
                             </div>
                         </div>
                         <div class="form-table mbr-valign-top col-md-9  formblock" data-form-type="formoid">
@@ -86,8 +86,8 @@
                             <div data-form-alert="true">
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
-                            <form action="https://mobirise.com/" method="post" data-form-title="MITNet Exchange">
-                                <input type="hidden" value="41j3pGZztMQk65K7aMbAxG2gb4MYTsAn7YvlxQW9RyzXE/EjN0lfxjvauu8/BJg6H+gN8z7kTsXsa0rrlasScpYOCMeBE/u8JvVXaS5Kd0nyt9vdeAXa4c13BG6ztZgn" data-form-email="true">
+                            <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
+                                <input type="hidden" value="ffdsNOtVwmSH7FnnP4c/o6+jXtdgs4aMtA2NtpU5LrLvfwnKXc7sMBh+tE/4NXIMzv6s3J3RaK6iH/bNc5CeSYGnj96J7m4977XjwGmrfpUuTII7/fKr5mh1+lzC8abC" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -116,7 +116,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="376" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
+        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
     </div>
 </footer>
 
