--- a/page4.html
+++ b/page4.html
@@ -40,11 +40,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">ICO Builder (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">Local Exchange (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extTable1-k">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mitnet.exchange">MITNet Instant Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,14 +57,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="392" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="392" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p>TERMS AND CONDITIONS OF SERVICE OF MITNet Exchange</p><p>(“the Agreement”)
+            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p>TERMS AND CONDITIONS OF SERVICE OF GETModer Foundation</p><p>(“the Agreement”)
 </p><p>THE AGREEMENT WAS LAST UPDATED ON 17 Feb 2018</p><p><br></p><p>INTRODUCTION
 </p><p>
-</p><p>1. Thank you for browsing our digital asset exchange website and/or placing an order with Bitmora Inc. a site operated by MITNet Inc. (“the Company”) with &nbsp;its website at ‘https://mitnet.exchange”).
+</p><p>1. Thank you for browsing our digital asset exchange website and/or placing an order with Bitmora Inc. a site operated by GETModer Inc. (“the Company”) with &nbsp;its website at ‘https://GETModer.io ”).
 </p><p>
 </p><p>2. By browsing the contents on the Website and/or placing an order, clicking to accept this Agreement or using and/or accessing any of the Company or related services (as the case may be), you agree to all the terms and conditions of the Agreement.
 </p><p>
@@ -182,7 +182,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-y" data-rv-view="390" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
+        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
     </div>
 </footer>
 
