--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">ICO Builder (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">Local Exchange (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extTable1-k">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mitnet.exchange">MITNet Instant Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web authoring software</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="302" style="background-image: url(assets/images/picture2-1209x680.png); padding-top: 120px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="302" style="background-image: url(assets/images/picture2-1209x680.png); padding-top: 120px; padding-bottom: 160px;">
 
     
 
@@ -98,7 +98,7 @@
 </div><div><strong>a) Borderless Crypto Financing</strong></div><div><span style="font-size: 1.07rem;">The problem has been obvious for some time - spending crypto assets today prevents cryptocurrency holders from gaining on any future growth in asset value; holders who buy low need to hold on to their investments in order to benefit from selling high.</span></div><div><span style="font-size: 1.07rem;">Decentralized and secure financial marketplace for peer to peer lending agreements using Blockchain and Smart Contracts.</span></div><div><strong>For Borrower:</strong> The GETModer platform allows you to borrow liquid funds instantly, based on the current value of your cryptocurrency asset holdings. You take out a loan, collateralized with more volatile assets such as Bitcoin or Ethereum - and in return you receive an agreed loan amount in a stable currency.&nbsp;<span style="font-size: 1.07rem;">And after repaying the loan you receive your whole collateral back; even if the collateral has increased in value multiple times.&nbsp;</span><span style="font-size: 1.07rem;">This way, you're able to acquire liquid funds for immediate needs, and save your crypto position, all at the same time. High lending ratio,&nbsp;</span></div><div><span style="font-size: 1.07rem;"><strong>For Lender: </strong>Lending opportunity is opened to global market / anyone who wishes to be lender. 
 </span><span style="font-size: 1.07rem;">We guarantee full repayment and absence of risks because all loans are secured on crypto assets of the borrowers.</span></div><div><span style="font-size: 1.07rem;"><strong>Incentives:</strong> Participants of our crypto-projects (<em>please refer to GETModer ITO below</em>) will entitle to special rate for both lending &amp; borrowing.</span></div><div><span style="font-size: 1.07rem;"><strong>Our Profits:</strong> Processing fee from lending &amp; borrowing</span></div><div><span style="font-size: 1.07rem;"><strong>Target:</strong> USD 5 million financing volume perday</span></div><div><strong></strong></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><br></div><div>
 </div><div>
-</div><div><strong>b) Instant Cryptocurrency Exchange
+</div><div><strong>b) Instant Cryptocurrency Exchange</strong></div><div><strong><a href="https://getmoder.exchange" class="text-danger">Access GETModer Exchange here</a></strong></div><div><strong><br></strong></div><div><strong>
 </strong></div><div>Our instant wallet to wallet exchange allows you to trade cryptocurrency without registering at any exchange or needing verification. The parent service already has over 700,000 customers onboard and processes over 50,000 BTC monthly. Our platform is partnered with Jaxx, Coinmarketcap, Bittrex, Coinpayments, Uquid debit card, Coinomi, and other reputable companies.
 </div><div>The wide range of cryptocurrency trading pairs provided makes the platform particularly appealing. It creates an opportunity to exchange any two currencies with minimal fuss. Traditional cryptocurrency trading platforms generally have a limited selection of trading pairs, meaning that sometimes users have to make multiple transactions to receive their desired cryptocurrency. Fiat currency support will be added to our exchange, with the inclusion of credit and debit card purchases.</div><div><strong>Incentives:</strong> We will provide most proftable free trading signals according to indepth technical analysis of cryptocurrency trading. Hence encourage mass users to use our exchange platform because of the free signals.</div><div><strong>Our profits:</strong> Trading transaction fee
 </div><div><strong>Target:</strong> USD 100 million exchange volume perday. 60% of the revenue earned from this currency exchange will use to buy back GTMR tokens circulating in the markets to fund our Lending Platform.<span style="font-size: 1.07rem;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></div><p></p></div>
@@ -587,7 +587,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-success" href="https://mitnet.exchange">GETModer Instant Exchange</a></div>
+                    <div class="text-xs-center"><a class="btn btn-success" href="https://getmoder.exchange">GETModer Instant Exchange</a></div>
                 </div>
             </div>
 
@@ -1011,7 +1011,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                 <div class="col-md-10 col-md-offset-1">
 
                     <div class="clearfix"></div>
-                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white active" role="tab" data-toggle="tab" href="#tab1extTabs1-m" aria-expanded="false">Whitepaper</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab2extTabs1-m" aria-expanded="true">Team</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab3extTabs1-m" aria-expanded="true">Github</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab4extTabs1-m" aria-expanded="false">Social</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab5extTabs1-m">Amazing</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6extTabs1-m">Beautiful</a></li></ul>
+                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white active" role="tab" data-toggle="tab" href="#tab1extTabs1-m" aria-expanded="false">Whitepaper</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab2extTabs1-m" aria-expanded="false">Team</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab3extTabs1-m" aria-expanded="false">Github</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab4extTabs1-m" aria-expanded="true">Social</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab5extTabs1-m">Amazing</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6extTabs1-m">Beautiful</a></li></ul>
 
                     <div class="tab-content noScroll">
                         <div id="tab1extTabs1-m" class="tab-pane in active" role="tabpanel">
@@ -1048,7 +1048,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                             <h3 class="">Github</h3>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p>To be published soon</p>
+                                    <p><a href="https://github.com/getmoder/IEO">https://github.com/getmoder/IEO</a><br><br><a href="https://github.com/getmoder/IEO" class="text-white">Smart contract might be updated or changed to enhance platform efficiency.<br></a></p>
                                 </div>
                             </div>
                         </div>
@@ -1089,7 +1089,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="360" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
+        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
     </div>
 </footer>
 
