--- a/page5.html
+++ b/page5.html
@@ -40,11 +40,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">ICO Builder (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">Local Exchange (Beta)</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extTable1-k">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mitnet.exchange">MITNet Instant Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,13 +57,13 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="398" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="398" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p>Privacy Policy</p><p><br></p><p>MITNet.exchange (“mitnet.exchange” or “we”) controls and provides access to the mit.exchange website, currently located at www.mitnet.exchange (the “Website”).</p><p><br></p><p>
+            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p>Privacy Policy</p><p><br></p><p>GETModer oundation (“GETModer.io” or “we”) controls and provides access to the GETModer.io website, currently located at www.GETModer.io (the “Website”).</p><p><br></p><p>
 </p><p>
-</p><p>At mitnet.exchange, we are fully committed to respecting your privacy and to protecting any information that our clients provide. Your privacy and security are both our highest priorities and we make every effort to ensure that all the information provided by you is protected. This Privacy Policy (the “Policy”) is designed to inform you about the terms of treating your personal data.
+</p><p>At GETModer, we are fully committed to respecting your privacy and to protecting any information that our clients provide. Your privacy and security are both our highest priorities and we make every effort to ensure that all the information provided by you is protected. This Privacy Policy (the “Policy”) is designed to inform you about the terms of treating your personal data.
 </p><p>
 </p><p><br></p><p>Personal Information
 </p><p>
@@ -96,7 +96,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="396" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
+        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
     </div>
 </footer>
 
