--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-v" data-rv-view="374">
+<section id="ext_menu-v" data-rv-view="563">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="378" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="567" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="HV5Mi/WbfuoqcZkfvcrk+A3i+u9sBRIjg+5r+1J2Yf77abMzGfVVHwxiLMG4negA0ZUa8KKKjOoEVrPKI27Y8Iq7cuezRL0uPqhO9b+n3mGKifKI1s4ypDKmpbsrNEYo" data-form-email="true">
+                                <input type="hidden" value="j2HMA7zq/OLWk8EfpZ9jp57ei76BCgNJUXiZ6UwoIHwX0IlojDg06unc2IE6qMEYDZIIBUHB8zA8JDMz3m7oy4SkAVbQ5dkbVG9tV2YxvaepydTIWT2pXQxt/o84RzdJ" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -113,7 +113,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="376" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="565" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
