create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="2" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="2" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     
 
@@ -70,6 +70,16 @@
 </div><div>Ending  31 June 2018</div></h3>
         <div class="countdown" data-end="2018/06/15"></div>
     </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-3q" data-rv-view="13" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;"><strong>Updates &amp; News:</strong></span></p><p><span style="font-style: normal;"><br></span></p><p><span style="font-style: normal;">⁕ GETModer has adopted a high loan to coin ratio of 95%.</span></p><p><span style="font-style: normal;">However a maximum C/L Ratio of 500% is possible under our special terms &amp; condition which is applicable to certain countries.</span></p><p><span style="font-style: normal;">A full details of loan terms will be avaialble after the completion of GETModer Initial Token Offering</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ GETModer will be offering borrowing on bitcoin, ether, ether classic, litecoin, ripple, bitcoin cash, zcash and other major digital currencies in sizes from $100 upwards over fixed terms.</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering ( closed door private sales) will be starting on 15 March 2018, for both instituitional &amp; personal participants.<br></span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering will be divided into 3 stages over a period of one month:</span></p><p><span style="font-size: 1.07rem;">- Early Bird 1 (starting 15 March)</span></p><p><span style="font-size: 1.07rem;">- Early Bird 2</span></p><p><span style="font-size: 1.07rem;">- Early Bird 3</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ If you are interested in joining the Early Bird Offering for maximum benefits, <a href="page7.html">please follow this link to get whitelisted</a><br></span></p></blockquote></div>
+        </div>
+    </div>
+
 </section>
 
 <section class="mbr-section mbr-parallax-background" id="content5-3e" data-rv-view="5" style="background-image: url(assets/images/head-bacground-1965x734.png); padding-top: 40px; padding-bottom: 40px;">
@@ -115,16 +125,6 @@
 </div><div><strong><br></strong></div><div><strong>Target:</strong> USD 100 million exchange volume perday. 60% of the revenue earned from this currency exchange will use to buy back GTMR tokens circulating in the markets to fund our Lending Platform.<span style="font-size: 1.07rem;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></div><p></p></div>
                 
             </div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content2-3q" data-rv-view="13" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;">GETModer has adopted a high loan to coin ratio of 95%.</span></p><p><span style="font-style: normal;">However a maximum C/L Ratio of 500% is possible under our special terms &amp; condition which is applicable to certain countries.</span></p><p><span style="font-style: normal;">A full details of loan terms will be avaialble after the completion of GETModer Initial Token Offering</span></p><p><span style="font-style: normal;"><br></span></p><p><span style="font-style: normal;">GETModer can now offer borrow on bitcoin, ether, ether classic, litecoin, ripple, bitcoin cash, zcash and other digital currencies in sizes from $100 upwards over fixed terms.</span></p></blockquote></div>
         </div>
     </div>
 
