--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="589" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="589" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -68,7 +68,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 29%; font-size: 72.5px;"><img src="assets/images/earth-img-991x991.png"></div>
+                        <div class="mbr-figure image-size" style="width: 19%; font-size: 47.5px;"><img src="assets/images/earth-img-991x991.png"></div>
                         <div class="span-title">
                             <div class="span-title">
                               
@@ -297,7 +297,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="439" style="background-image: url(assets/images/contact-bg-1960x100012.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="439" style="background-image: url(assets/images/contact-bg-1960x100013.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
