--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="508" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="508" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
 
     
 
@@ -228,7 +228,7 @@
     </div>
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="524" style="background-image: url(assets/images/contact-bg-1960x100016.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="524" style="background-image: url(assets/images/contact-bg-1960x100017.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -1089,7 +1089,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4g" data-rv-view="566" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
+        <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
     </div>
 </footer>
 
