create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-success" href="page6.html">中文/​普通话</a> <a class="btn btn-danger-outline btn-danger" href="index.html">Crypto Instant Exchange</a></div>
+                <div class="text-xs-center"><a class="btn btn-success" href="page6.html">中文/​普通话</a> <a class="btn btn-danger-outline btn-danger" href="https://getmoder.exchange/">Crypto Instant Exchange</a></div>
             </div>
         </div>
     </div>
@@ -148,7 +148,7 @@
 </div><div><strong>a) Borderless Crypto Financing</strong></div><div><span style="font-size: 1.07rem;">The problem has been obvious for some time - spending crypto assets today prevents cryptocurrency holders from gaining on any future growth in asset value; holders who buy low need to hold on to their investments in order to benefit from selling high.</span></div><div><span style="font-size: 1.07rem;">Decentralized and secure financial marketplace for peer to peer lending agreements using Blockchain and Smart Contracts.</span></div><div><strong><br></strong></div><div><strong>For Borrower:</strong> The GETModer platform allows you to borrow liquid funds instantly, based on the current value of your cryptocurrency asset holdings. You take out a loan, collateralized with more volatile assets such as Bitcoin or Ethereum - and in return you receive an agreed loan amount in a stable currency.&nbsp;<span style="font-size: 1.07rem;">And after repaying the loan you receive your whole collateral back; even if the collateral has increased in value multiple times.&nbsp;</span><span style="font-size: 1.07rem;">This way, you're able to acquire liquid funds for immediate needs, and save your crypto position, all at the same time. High lending ratio,&nbsp;</span></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><span style="font-size: 1.07rem;"><strong>For Lender: </strong>Lending opportunity is opened to global market / anyone who wishes to be lender. 
 </span><span style="font-size: 1.07rem;">We guarantee full repayment and absence of risks because all loans are secured on crypto assets of the borrowers.</span></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><span style="font-size: 1.07rem;"><strong>Incentives:</strong> Participants of our crypto-projects (<em>please refer to GETModer ITO below</em>) will entitle to special rate for both lending &amp; borrowing.</span></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><span style="font-size: 1.07rem;"><strong>Our Profits:</strong> Processing fee from lending &amp; borrowing</span></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><span style="font-size: 1.07rem;"><strong>Target:</strong> USD 5 million financing volume perday</span></div><div><strong></strong></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><br></div><div>
 </div><div>
-</div><div><strong>b) Instant Cryptocurrency Exchange</strong></div><div><strong><a href="https://getmoder.exchange" class="text-danger">Access GETModer Exchange here</a></strong></div><div><strong><br></strong></div><div><strong>
+</div><div><strong>b) Instant Cryptocurrency Exchange</strong></div><div><strong><a href="https://getmoder.exchange/" class="text-danger">Access GETModer Exchange here</a></strong></div><div><strong><br></strong></div><div><strong>
 </strong></div><div>Our instant wallet to wallet exchange allows you to trade cryptocurrency without registering at any exchange or needing verification. The parent service already has over 700,000 customers onboard and processes over 50,000 BTC monthly. Our platform is partnered with Jaxx, Coinmarketcap, Bittrex, Coinpayments, Uquid debit card, Coinomi, and other reputable companies.
 </div><div>The wide range of cryptocurrency trading pairs provided makes the platform particularly appealing. It creates an opportunity to exchange any two currencies with minimal fuss. Traditional cryptocurrency trading platforms generally have a limited selection of trading pairs, meaning that sometimes users have to make multiple transactions to receive their desired cryptocurrency. Fiat currency support will be added to our exchange, with the inclusion of credit and debit card purchases.</div><div><strong><br></strong></div><div><strong>Incentives:</strong> We will provide most proftable free trading signals according to indepth technical analysis of cryptocurrency trading. Hence encourage mass users to use our exchange platform because of the free signals.</div><div><strong><br></strong></div><div><strong>Our profits:</strong> Trading transaction fee
 </div><div><strong><br></strong></div><div><strong>Target:</strong> USD 100 million exchange volume perday. 60% of the revenue earned from this currency exchange will use to buy back GTMR tokens circulating in the markets to fund our Lending Platform.<span style="font-size: 1.07rem;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></div><p></p></div>
@@ -287,7 +287,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-success" href="https://getmoder.exchange">Access Instant Crypto Exchange</a></div>
+                  <div><a class="btn btn-success" href="https://getmoder.exchange/">Access Instant Crypto Exchange</a></div>
               </div>
 
 
@@ -304,7 +304,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10004.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
