--- a/page6.html
+++ b/page6.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="98" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.co/e">web page maker software</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="98" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
 
     
 
@@ -228,7 +228,7 @@
     </div>
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="114" style="background-image: url(assets/images/contact-bg-1960x10004.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="114" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
